<resources>
    <string name="app_name">Kosmos</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get started</string>
    <string name="welcome">Welcome !</string>
    <string name="mars">Mars</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="next">Next</string>
    <string name="previews">Previews</string>
</resources>