<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">
    <ImageView
        android:id="@+id/black_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/black_fone"
        android:contentDescription="@string/todo" />


    <VideoView
        android:id="@+id/videoAfterLogin"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables"
                >
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mercury"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/ImageMercury"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:background="@drawable/images_shape"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/mecuriy" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables"
                android:id="@+id/ImageVenera">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venus"
                    android:textSize="40sp"
                    android:textColor="@color/white"/>
                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/images_shape"
                    app:srcCompat="@drawable/venera"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/ImageEarth"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/earth"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    app:srcCompat="@drawable/kosmos"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables"
                android:id="@+id/ImageMars">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mars"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/mars_back_first" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables"
                android:id="@+id/ImageJupiter">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jupiter"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    app:srcCompat="@drawable/jupiter"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                android:id="@+id/ImageSaturn"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturn"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    app:srcCompat="@drawable/saturn"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uranus"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    app:srcCompat="@drawable/uranus"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="-30dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neptune"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    app:srcCompat="@drawable/neptune"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>